gccida/g2/loop_iterations
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4027:4: error: expected ';' after expression
rtx v43; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4027:5: error: use of undeclared identifier 'v43'
rtx v43; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4028:4: error: expected ';' after expression
rtx v44; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4028:5: error: use of undeclared identifier 'v44'
rtx v44; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4030:4: error: expected ';' after expression
rtx v46; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4030:5: error: use of undeclared identifier 'v46'
rtx v46; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4043:4: error: expected ';' after expression
rtx v59; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4043:5: error: use of undeclared identifier 'v59'
rtx v59; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4044:4: error: expected ';' after expression
rtx increment; // [rsp+8h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4044:5: error: use of undeclared identifier 'increment'
rtx increment; // [rsp+8h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4045:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode incrementa; // [rsp+8h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4048:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv_inc; // [rsp+18h] [rbp-50h] 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4048:14: error: use of undeclared identifier 'biv_inc'
induction_1 *biv_inc; // [rsp+18h] [rbp-50h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4051:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode off_by_onea; // [rsp+20h] [rbp-48h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4057:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)loop->end[1]; 
               ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4119:20: error: expected ')'
if ( cont == ( rtx)v7 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4119:4: note: to match this '('
if ( cont == ( rtx)v7 ) 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4132:58: error: expected ')'
condition_for_loop = get_condition_for_loop( loop, ( rtx)v2); 
                                                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4132:44: note: to match this '('
condition_for_loop = get_condition_for_loop( loop, ( rtx)v2); 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4142:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)condition_for_loop->fld[0]; 
                       ^~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/unroll.c:4175:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v17] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/loop_iterations/src/obj/unroll.o] Error 1
